// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.rowSelection fix expand on th left when selection column fixed on the left 1`] = `
<div
  class="ant-table-wrapper osui-table"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-left"
      >
        <div
          class="ant-table-container"
        >
          <div
            class="ant-table-content"
            style="overflow-x:auto;overflow-y:hidden"
          >
            <table
              style="width:903px;min-width:100%;table-layout:fixed"
            >
              <colgroup>
                <col
                  class="ant-table-expand-icon-col"
                />
                <col
                  class="ant-table-selection-col"
                />
              </colgroup>
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class="ant-table-cell ant-table-row-expand-icon-cell ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  />
                  <th
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    <div
                      class="ant-table-selection"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </div>
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              >
                <tr
                  aria-hidden="true"
                  class="ant-table-measure-row"
                  style="height:0;font-size:0"
                >
                  <td
                    style="padding:0;border:0;height:0"
                  >
                    <div
                      style="height:0;overflow:hidden"
                    >
                       
                    </div>
                  </td>
                  <td
                    style="padding:0;border:0;height:0"
                  >
                    <div
                      style="height:0;overflow:hidden"
                    >
                       
                    </div>
                  </td>
                  <td
                    style="padding:0;border:0;height:0"
                  >
                    <div
                      style="height:0;overflow:hidden"
                    >
                       
                    </div>
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ant-table-cell ant-table-row-expand-icon-cell ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  >
                    <button
                      aria-label="Expand row"
                      class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                      type="button"
                    />
                  </td>
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ant-table-cell ant-table-row-expand-icon-cell ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  >
                    <button
                      aria-label="Expand row"
                      class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                      type="button"
                    />
                  </td>
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ant-table-cell ant-table-row-expand-icon-cell ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  >
                    <button
                      aria-label="Expand row"
                      class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                      type="button"
                    />
                  </td>
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ant-table-cell ant-table-row-expand-icon-cell ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  >
                    <button
                      aria-label="Expand row"
                      class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                      type="button"
                    />
                  </td>
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="ant-pagination ant-table-pagination ant-table-pagination-right osui-pagination"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <svg
            class="osui-icon "
            disabled=""
            focusable="false"
            height="1024"
            viewBox="0 0 1024 1024"
            width="1024"
          >
            <path
              d="M768 798.255L460.8 512 768 225.745 665.6 128 256 512l409.6 384z"
              fill="currentColor"
            />
          </svg>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-next ant-pagination-disabled"
          title="Next Page"
        >
          <svg
            class="osui-icon "
            disabled=""
            focusable="false"
            height="1024"
            viewBox="0 0 1024 1024"
            width="1024"
          >
            <path
              d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
              fill="currentColor"
            />
          </svg>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.rowSelection fix selection column on the left 1`] = `
<div
  class="ant-table-wrapper osui-table"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-left"
      >
        <div
          class="ant-table-container"
        >
          <div
            class="ant-table-content"
            style="overflow-x:auto;overflow-y:hidden"
          >
            <table
              style="width:903px;min-width:100%;table-layout:fixed"
            >
              <colgroup>
                <col
                  class="ant-table-selection-col"
                />
              </colgroup>
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    <div
                      class="ant-table-selection"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </div>
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              >
                <tr
                  aria-hidden="true"
                  class="ant-table-measure-row"
                  style="height:0;font-size:0"
                >
                  <td
                    style="padding:0;border:0;height:0"
                  >
                    <div
                      style="height:0;overflow:hidden"
                    >
                       
                    </div>
                  </td>
                  <td
                    style="padding:0;border:0;height:0"
                  >
                    <div
                      style="height:0;overflow:hidden"
                    >
                       
                    </div>
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="ant-pagination ant-table-pagination ant-table-pagination-right osui-pagination"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <svg
            class="osui-icon "
            disabled=""
            focusable="false"
            height="1024"
            viewBox="0 0 1024 1024"
            width="1024"
          >
            <path
              d="M768 798.255L460.8 512 768 225.745 665.6 128 256 512l409.6 384z"
              fill="currentColor"
            />
          </svg>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-next ant-pagination-disabled"
          title="Next Page"
        >
          <svg
            class="osui-icon "
            disabled=""
            focusable="false"
            height="1024"
            viewBox="0 0 1024 1024"
            width="1024"
          >
            <path
              d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
              fill="currentColor"
            />
          </svg>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.rowSelection fix selection column on the left when any other column is fixed 1`] = `
<div
  class="ant-table-wrapper osui-table"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-left"
      >
        <div
          class="ant-table-container"
        >
          <div
            class="ant-table-content"
            style="overflow-x:auto;overflow-y:hidden"
          >
            <table
              style="width:903px;min-width:100%;table-layout:fixed"
            >
              <colgroup>
                <col
                  class="ant-table-selection-col"
                />
              </colgroup>
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  >
                    <div
                      class="ant-table-selection"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </div>
                  </th>
                  <th
                    class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              >
                <tr
                  aria-hidden="true"
                  class="ant-table-measure-row"
                  style="height:0;font-size:0"
                >
                  <td
                    style="padding:0;border:0;height:0"
                  >
                    <div
                      style="height:0;overflow:hidden"
                    >
                       
                    </div>
                  </td>
                  <td
                    style="padding:0;border:0;height:0"
                  >
                    <div
                      style="height:0;overflow:hidden"
                    >
                       
                    </div>
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column ant-table-cell-fix-left"
                    style="position:sticky;left:0"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                    style="position:sticky;left:0"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="ant-pagination ant-table-pagination ant-table-pagination-right osui-pagination"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <svg
            class="osui-icon "
            disabled=""
            focusable="false"
            height="1024"
            viewBox="0 0 1024 1024"
            width="1024"
          >
            <path
              d="M768 798.255L460.8 512 768 225.745 665.6 128 256 512l409.6 384z"
              fill="currentColor"
            />
          </svg>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-next ant-pagination-disabled"
          title="Next Page"
        >
          <svg
            class="osui-icon "
            disabled=""
            focusable="false"
            height="1024"
            viewBox="0 0 1024 1024"
            width="1024"
          >
            <path
              d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
              fill="currentColor"
            />
          </svg>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.rowSelection render with default selection correctly 1`] = `
<div>
  <div
    class="ant-dropdown ant-dropdown-hidden"
    style="pointer-events:none"
  >
    <ul
      class="ant-dropdown-menu ant-dropdown-menu-root ant-dropdown-menu-vertical ant-dropdown-menu-light"
      data-menu-list="true"
      role="menu"
      tabindex="0"
    >
      <li
        class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="ant-dropdown-menu-title-content"
        >
          Select all data
        </span>
      </li>
      <li
        class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="ant-dropdown-menu-title-content"
        >
          Invert current page
        </span>
      </li>
      <li
        class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="ant-dropdown-menu-title-content"
        >
          Clear all data
        </span>
      </li>
    </ul>
    <div
      aria-hidden="true"
      style="display:none"
    />
  </div>
</div>
`;

exports[`Table.rowSelection should support getPopupContainer 1`] = `
<div
  class="ant-table-wrapper osui-table"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table"
      >
        <div
          class="ant-table-container"
        >
          <div
            class="ant-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup>
                <col
                  class="ant-table-selection-col"
                />
              </colgroup>
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <div
                      class="ant-table-selection"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                      <div
                        class="ant-table-selection-extra"
                      >
                        <span
                          class="ant-dropdown-trigger ant-dropdown-open"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                          <div
                            style="position: absolute; top: 0px; left: 0px; width: 100%;"
                          >
                            <div>
                              <div
                                class="ant-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
                                style="opacity: 0; pointer-events: none;"
                              >
                                <ul
                                  class="ant-dropdown-menu ant-dropdown-menu-root ant-dropdown-menu-vertical ant-dropdown-menu-light"
                                  data-menu-list="true"
                                  role="menu"
                                  tabindex="0"
                                >
                                  <li
                                    class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
                                    data-menu-id="rc-menu-uuid-test-all"
                                    role="menuitem"
                                    tabindex="-1"
                                  >
                                    <span
                                      class="ant-dropdown-menu-title-content"
                                    >
                                      Select all data
                                    </span>
                                  </li>
                                  <li
                                    class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
                                    data-menu-id="rc-menu-uuid-test-invert"
                                    role="menuitem"
                                    tabindex="-1"
                                  >
                                    <span
                                      class="ant-dropdown-menu-title-content"
                                    >
                                      Invert current page
                                    </span>
                                  </li>
                                  <li
                                    class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
                                    data-menu-id="rc-menu-uuid-test-none"
                                    role="menuitem"
                                    tabindex="-1"
                                  >
                                    <span
                                      class="ant-dropdown-menu-title-content"
                                    >
                                      Clear all data
                                    </span>
                                  </li>
                                </ul>
                                <div
                                  aria-hidden="true"
                                  style="display: none;"
                                />
                              </div>
                            </div>
                          </div>
                        </span>
                      </div>
                    </div>
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              >
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="ant-pagination ant-table-pagination ant-table-pagination-right osui-pagination"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <svg
            class="osui-icon "
            disabled=""
            focusable="false"
            height="1024"
            viewBox="0 0 1024 1024"
            width="1024"
          >
            <path
              d="M768 798.255L460.8 512 768 225.745 665.6 128 256 512l409.6 384z"
              fill="currentColor"
            />
          </svg>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-next ant-pagination-disabled"
          title="Next Page"
        >
          <svg
            class="osui-icon "
            disabled=""
            focusable="false"
            height="1024"
            viewBox="0 0 1024 1024"
            width="1024"
          >
            <path
              d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
              fill="currentColor"
            />
          </svg>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.rowSelection should support getPopupContainer from ConfigProvider 1`] = `
<div
  class="ant-table-wrapper osui-table"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table"
      >
        <div
          class="ant-table-container"
        >
          <div
            class="ant-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup>
                <col
                  class="ant-table-selection-col"
                />
              </colgroup>
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <div
                      class="ant-table-selection"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                      <div
                        class="ant-table-selection-extra"
                      >
                        <span
                          class="ant-dropdown-trigger ant-dropdown-open"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                        <div
                          style="position: absolute; top: 0px; left: 0px; width: 100%;"
                        >
                          <div>
                            <div
                              class="ant-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
                              style="opacity: 0; pointer-events: none;"
                            >
                              <ul
                                class="ant-dropdown-menu ant-dropdown-menu-root ant-dropdown-menu-vertical ant-dropdown-menu-light"
                                data-menu-list="true"
                                role="menu"
                                tabindex="0"
                              >
                                <li
                                  class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
                                  data-menu-id="rc-menu-uuid-test-all"
                                  role="menuitem"
                                  tabindex="-1"
                                >
                                  <span
                                    class="ant-dropdown-menu-title-content"
                                  >
                                    Select all data
                                  </span>
                                </li>
                                <li
                                  class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
                                  data-menu-id="rc-menu-uuid-test-invert"
                                  role="menuitem"
                                  tabindex="-1"
                                >
                                  <span
                                    class="ant-dropdown-menu-title-content"
                                  >
                                    Invert current page
                                  </span>
                                </li>
                                <li
                                  class="ant-dropdown-menu-item ant-dropdown-menu-item-only-child"
                                  data-menu-id="rc-menu-uuid-test-none"
                                  role="menuitem"
                                  tabindex="-1"
                                >
                                  <span
                                    class="ant-dropdown-menu-title-content"
                                  >
                                    Clear all data
                                  </span>
                                </li>
                              </ul>
                              <div
                                aria-hidden="true"
                                style="display: none;"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              >
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="ant-pagination ant-table-pagination ant-table-pagination-right osui-pagination"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <svg
            class="osui-icon "
            disabled=""
            focusable="false"
            height="1024"
            viewBox="0 0 1024 1024"
            width="1024"
          >
            <path
              d="M768 798.255L460.8 512 768 225.745 665.6 128 256 512l409.6 384z"
              fill="currentColor"
            />
          </svg>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-next ant-pagination-disabled"
          title="Next Page"
        >
          <svg
            class="osui-icon "
            disabled=""
            focusable="false"
            height="1024"
            viewBox="0 0 1024 1024"
            width="1024"
          >
            <path
              d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
              fill="currentColor"
            />
          </svg>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.rowSelection use column as selection column when key is \`selection-column\` 1`] = `
<div
  class="ant-table-wrapper osui-table"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table"
      >
        <div
          class="ant-table-container"
        >
          <div
            class="ant-table-content"
          >
            <table
              style="table-layout:auto"
            >
              <colgroup>
                <col
                  class="ant-table-selection-col"
                />
              </colgroup>
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <div
                      class="ant-table-selection"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </div>
                  </th>
                  <th
                    class="ant-table-cell"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              >
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ant-table-cell ant-table-selection-column"
                  >
                    <label
                      class="ant-checkbox-wrapper"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="ant-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="ant-pagination ant-table-pagination ant-table-pagination-right osui-pagination"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <svg
            class="osui-icon "
            disabled=""
            focusable="false"
            height="1024"
            viewBox="0 0 1024 1024"
            width="1024"
          >
            <path
              d="M768 798.255L460.8 512 768 225.745 665.6 128 256 512l409.6 384z"
              fill="currentColor"
            />
          </svg>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-next ant-pagination-disabled"
          title="Next Page"
        >
          <svg
            class="osui-icon "
            disabled=""
            focusable="false"
            height="1024"
            viewBox="0 0 1024 1024"
            width="1024"
          >
            <path
              d="M256 798.255L563.2 512 256 225.745 358.4 128 768 512 358.4 896z"
              fill="currentColor"
            />
          </svg>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
